--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,26 @@
-version: '3.4'
+version: '3'
+
 services:
   jira:
-    image: haxqer/jira:rm
-    container_name: jira-srv
-    environment:
-      - TZ=Asia/Shanghai
-#      - JVM_MINIMUM_MEMORY=1g
-#      - JVM_MAXIMUM_MEMORY=12g
-#      - JVM_CODE_CACHE_ARGS='-XX:InitialCodeCacheSize=1g -XX:ReservedCodeCacheSize=8g'
-    depends_on:
-      - mysql
+    image: git.hisoft.com.vn:5050/core/jira:latest
+    volumes:
+      - "jira-data:/var/atlassian/application-data/jira"
+      - "jira-config:/opt/atlassian/etc/"
     ports:
       - "8080:8080"
-    volumes:
-      - home_data:/var/jira
-    restart: always
-    networks:
-      - network-bridge
+    env_file:
+      - ./.env
+    depends_on:
+      - db
 
-  mysql:
-    image: mysql:5.7
-    container_name: mysql-jira
-    environment:
-      - TZ=Asia/Shanghai
-      - MYSQL_DATABASE=jira
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_USER=jira
-      - MYSQL_PASSWORD=123123
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_bin']
-#    ports:
-#      - "13306:3306"
+  db:
+    image: mysql:8
     volumes:
-      - mysql_data:/var/lib/mysql
-    restart: always
-    networks:
-      - network-bridge
-
-networks:
-  network-bridge:
-    driver: bridge
+      - "db:/var/lib/mysql"
+    env_file:
+      - ./.env
 
 volumes:
-  home_data:
-    external: false
-  mysql_data:
-    external: false
+  jira-data:
+  jira-config:
+  db:
